JES rate effects

--- a/postprocess/systematics.ipynb
+++ b/postprocess/systematics.ipynb
@@ -147,10 +147,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4ff4c0a5-f0c9-4531-8b04-12ba23f3b76d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mplhep'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [7], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmpl\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmplhep\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mhep\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mboost_histogram\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mbh\u001b[39;00m\n\u001b[1;32m      6\u001b[0m use_helvet \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m \u001b[38;5;66;03m## true: use helvetica for plots, make sure the system have the font installed\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mplhep'"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -237,10 +249,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c8412b18-2ece-41c7-b47f-75f283d6ef9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hep' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [10], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_cmap\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcycler\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m cycler\n\u001b[0;32m----> 4\u001b[0m \u001b[43mhep\u001b[49m\u001b[38;5;241m.\u001b[39mstyle\u001b[38;5;241m.\u001b[39muse(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCMS\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m mpl\u001b[38;5;241m.\u001b[39mrcParams[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maxes.prop_cycle\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m cycler(color\u001b[38;5;241m=\u001b[39mget_cmap(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtab10\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mcolors)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21muncertainty_plot\u001b[39m(arrays, weight, plot_name: \u001b[38;5;28mstr\u001b[39m, x_name: \u001b[38;5;28mstr\u001b[39m, year\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2018\u001b[39m\u001b[38;5;124m'\u001b[39m, bins\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, bin_width\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, x_min\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, x_max\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2000\u001b[39m, overflow\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, underflow\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, log_y\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, x_axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, y_min\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, y_max\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.5\u001b[39m):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hep' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib.cm import get_cmap\n",
     "from cycler import cycler\n",
@@ -333,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "1e2cff5d",
    "metadata": {},
    "outputs": [],
@@ -2434,10 +2458,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "61cbf0fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'2016pre': {}, '2016post': {}, '2017': {}, '2018': {}, 'Run2': {}}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6b67b8af",
+   "id": "5bd2804d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "y='Run2'\n",
+    "\n",
+    "arrays = {'up': {}, 'down': {}}\n",
+    "variation = {'up': {}, 'down': {}}\n",
+    "rate_variation = {'up': {}, 'down': {}}\n",
+    "for k in events['Run2']:\n",
+    "    if 'H(bb)' not in k:\n",
+    "        continue\n",
+    "    m = int(k.split('$')[0])\n",
+    "    mass_widow = np.std(events[y][k]['photon+jet_mass'])\n",
+    "    cut = f\"\"\"(\n",
+    "        (events[y][k]['photon-jet_deltaR'] > 1.1) &\n",
+    "        (np.abs(events[y][k].photon_eta) < 1.4442) & \n",
+    "        (np.abs(events[y][k].AK8jet_eta) < 2.4) & \n",
+    "        (events[y][k].photon_pt/events[y][k]['photon+jet_mass'] > 0.35) & \n",
+    "        (events[y][k]['AK8jet_Xbb_tagger']>0.8) & \n",
+    "        (events[y][k]['AK8jet_Xbb_tagger']<0.98) & \n",
+    "        (events[y][k]['AK8jet_particleNet_mass'] > 110) & \n",
+    "        (events[y][k]['AK8jet_particleNet_mass'] < 150)\n",
+    "    )\"\"\"\n",
+    "    arrays={\n",
+    "        'up': events[y][k]['photon+jet_mass_JES_up'][eval(cut)],\n",
+    "        'nominal': events[y][k]['photon+jet_mass'][eval(cut)],\n",
+    "        'down': events[y][k]['photon+jet_mass_JES_down'][eval(cut)]\n",
+    "    }\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6b67b8af",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'variation_plot' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [9], line 33\u001b[0m\n\u001b[1;32m     30\u001b[0m     variation[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdown\u001b[39m\u001b[38;5;124m'\u001b[39m][m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39mvariation[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mup\u001b[39m\u001b[38;5;124m'\u001b[39m][m]\n\u001b[1;32m     31\u001b[0m     systematics[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJES\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSR1\u001b[39m\u001b[38;5;124m'\u001b[39m][m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mround\u001b[39m(variation[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mup\u001b[39m\u001b[38;5;124m'\u001b[39m][m], \u001b[38;5;241m3\u001b[39m))\n\u001b[0;32m---> 33\u001b[0m \u001b[43mvariation_plot\u001b[49m(arrays\u001b[38;5;241m=\u001b[39mvariation, plot_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJES_H_SR1\u001b[39m\u001b[38;5;124m'\u001b[39m, x_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m$m^\u001b[39m\u001b[38;5;132;01m{gen}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{resonance}\u001b[39;00m\u001b[38;5;124m$ [GeV]\u001b[39m\u001b[38;5;124m'\u001b[39m, y_min\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.05\u001b[39m, y_max\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.05\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'variation_plot' is not defined"
+     ]
+    }
+   ],
    "source": [
     "y='Run2'\n",
     "\n",
@@ -2759,6 +2851,56 @@
     "    variation['down'][m] = -variation['up'][m]\n",
     "\n",
     "variation_plot(arrays=variation, plot_name='JES_Z_10p0_SR2', x_name=r'$m^{gen}_{resonance}$ [GeV]', y_min=-0.05, y_max=0.05)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13e1f36e",
+   "metadata": {},
+   "source": [
+    "### rate effects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acd87714",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y='Run2'\n",
+    "\n",
+    "arrays = {'up': {}, 'down': {}}\n",
+    "variation = {'up': {}, 'down': {}}\n",
+    "\n",
+    "for k in events['Run2']:\n",
+    "    if 'H(bb)' not in k:\n",
+    "        continue\n",
+    "    m = int(k.split('$')[0])\n",
+    "    mass_widow = np.std(events[y][k]['photon+jet_mass'])\n",
+    "    cut = f\"\"\"(\n",
+    "        (events[y][k]['photon-jet_deltaR'] > 1.1) &\n",
+    "        (np.abs(events[y][k].photon_eta) < 1.4442) & \n",
+    "        (np.abs(events[y][k].AK8jet_eta) < 2.4) & \n",
+    "        (events[y][k].photon_pt/events[y][k]['photon+jet_mass'] > 0.35) & \n",
+    "        (events[y][k]['AK8jet_Xbb_tagger']>0.8) & \n",
+    "        (events[y][k]['AK8jet_Xbb_tagger']<0.98) & \n",
+    "        (events[y][k]['AK8jet_particleNet_mass'] > 110) & \n",
+    "        (events[y][k]['AK8jet_particleNet_mass'] < 150) &\n",
+    "        (events[y][k]['photon+jet_mass'] > {m} - 3*{mass_widow}) & \n",
+    "        (events[y][k]['photon+jet_mass'] < {m} + 3*{mass_widow})\n",
+    "    )\"\"\"\n",
+    "    arrays={\n",
+    "        'up': events[y][k]['photon+jet_mass_JES_up'][eval(cut)],\n",
+    "        'nominal': events[y][k]['photon+jet_mass'][eval(cut)],\n",
+    "        'down': events[y][k]['photon+jet_mass_JES_down'][eval(cut)]\n",
+    "    }\n",
+    "    \n",
+    "    variation['up'][m] = min(np.abs(np.mean(arrays['up'])/np.mean(arrays['nominal'])-1), np.abs(np.mean(arrays['down'])/np.mean(arrays['nominal'])-1))\n",
+    "    variation['down'][m] = -variation['up'][m]\n",
+    "    systematics['JES']['SR1'][m] = float(1+round(variation['up'][m], 3))\n",
+    "\n",
+    "variation_plot(arrays=variation, plot_name='JES_H_SR1', x_name=r'$m^{gen}_{resonance}$ [GeV]', y_min=-0.05, y_max=0.05)"
    ]
   },
   {
@@ -4159,7 +4301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4173,7 +4315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
