--- a/postprocess/Analyze.ipynb
+++ b/postprocess/Analyze.ipynb
@@ -2304,7 +2304,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2319,11 +2319,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.7"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "bc8653c37afde981a02f518cc5ed66e36d68f5e1c41895fdf66da08341e86c45"
-   }
   }
  },
  "nbformat": 4,
