--- a/postprocess/systematics.ipynb
+++ b/postprocess/systematics.ipynb
@@ -4316,7 +4316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4330,7 +4330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.14"
   }
  },
  "nbformat": 4,
