fix duplicated events

--- a/postprocess/Analyze.ipynb
+++ b/postprocess/Analyze.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "source = 'glopart_v2'\n",
-    "base = f'/data/bond/fudawei/public/bbgamma_output/{source}'\n",
+    "base = f'/eos/user/d/dfu/bbgamma_output/{source}'\n",
     "\n",
     "filepath = {\n",
     "    year: {\n",
@@ -42,7 +42,6 @@
     "BKG = set([k for k in filepath['2018'].keys()]) - set(['data'])\n",
     "\n",
     "for year in filepath:\n",
-    "    base = '/data/bond/fudawei/public/bbgamma_output/fixed'\n",
     "    for job_dir in sum([glob(f'{base}/mc/{year}/{channel}/*') for channel in ['ZpToHG', 'GluGluToZG']], []):\n",
     "        mass = job_dir.split('M')[1].replace('_0p014', '')\n",
     "        filepath[year][mass+r'$\\to$'+('H' if 'ZpToHG' in job_dir else 'Z')+r'$\\gamma$'] = [job_dir]\n",
@@ -130,31 +129,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nlo = correctionlib.CorrectionSet.from_file('src/parameters/nlo_kfactor.json')\n",
-    "list(nlo.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['gjets_nlo_kfactor_ewk',\n",
+       " 'gjets_nlo_kfactor_qcd',\n",
+       " 'wjets_nlo_kfactor_ewk',\n",
+       " 'wjets_nlo_kfactor_qcd',\n",
+       " 'zjets_nlo_kfactor_ewk',\n",
+       " 'zjets_nlo_kfactor_qcd']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "weight = {y: {} for y in events}\n",
-    "for y in events:\n",
-    "    for c in events[y]:\n",
-    "        if c == r'QCD+$\\gamma$':\n",
-    "            weight[y][c] = events[y][c].event_final_weight * nlo['gjets_nlo_kfactor_qcd'].evaluate(events[y][c]['AK8jet_pt'])\n",
-    "        elif c == r'W+$\\gamma$':\n",
-    "            weight[y][c] = events[y][c].event_final_weight * nlo['wjets_nlo_kfactor_qcd'].evaluate(events[y][c]['AK8jet_pt'])\n",
-    "        elif c == r'Z+$\\gamma$':\n",
-    "            weight[y][c] = events[y][c].event_final_weight * nlo['zjets_nlo_kfactor_qcd'].evaluate(events[y][c]['AK8jet_pt'])\n",
-    "        else:\n",
-    "            weight[y][c] = events[y][c].event_final_weight"
+    "nlo = correctionlib.CorrectionSet.from_file('../src/parameters/nlo_kfactor.json')\n",
+    "list(nlo.keys())"
    ]
   },
   {
@@ -162,6 +158,37 @@
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "weight = {y: {} for y in events}\n",
+    "for y in events:\n",
+    "    for c in events[y]:\n",
+    "        if c == r'QCD+$\\gamma$':\n",
+    "            weight[y][c] = events[y][c].event_final_weight #* nlo['gjets_nlo_kfactor_qcd'].evaluate(events[y][c]['AK8jet_pt'])\n",
+    "        elif c == r'W+$\\gamma$':\n",
+    "            weight[y][c] = events[y][c].event_final_weight #* nlo['wjets_nlo_kfactor_qcd'].evaluate(events[y][c]['AK8jet_pt'])\n",
+    "        elif c == r'Z+$\\gamma$':\n",
+    "            weight[y][c] = events[y][c].event_final_weight #* nlo['zjets_nlo_kfactor_qcd'].evaluate(events[y][c]['AK8jet_pt'])\n",
+    "        else:\n",
+    "            weight[y][c] = events[y][c].event_final_weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "for year in events:\n",
     "    weight[year]['bkg'] = ak.concatenate([weight[year][c] for c in BKG], axis=0)\n",
@@ -180,9 +207,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/dfu/ipykernel_577439/1903999373.py:15: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
+      "  mpl.rcParams['axes.prop_cycle'] = cycler(color=get_cmap(\"tab10\").colors)\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -2094,6 +2130,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'1000$\\\\to$H(bb)$\\\\gamma$'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[42], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m a\u001b[38;5;241m=\u001b[39m\u001b[43mevents\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mRun2\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m1000$\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mto$H(bb)$\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgamma$\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mevent_No.\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[0;31mKeyError\u001b[0m: '1000$\\\\to$H(bb)$\\\\gamma$'"
+     ]
+    }
+   ],
+   "source": [
+    "a=events['Run2'][r'1000$\\to$H(bb)$\\gamma$']['event_No.']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2109,14 +2166,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>[588849792,\n",
+       " 590745837,\n",
+       " 590494085,\n",
+       " 592082355,\n",
+       " 591485282,\n",
+       " 684100335,\n",
+       " 729815637,\n",
+       " 967430234,\n",
+       " 973990643,\n",
+       " 978341673,\n",
+       " ...,\n",
+       " 441855142,\n",
+       " 451737843,\n",
+       " 451550695,\n",
+       " 453721576,\n",
+       " 452427502,\n",
+       " 455344210,\n",
+       " 455830222,\n",
+       " 455692605,\n",
+       " 459693015]\n",
+       "---------------------------------------------------------\n",
+       "type: 539181 * ?uint64[parameters={&quot;__doc__&quot;: &quot;event/l&quot;}]</pre>"
+      ],
+      "text/plain": [
+       "<Array [588849792, 590745837, ..., 459693015] type='539181 * ?uint64[parame...'>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events[y][k][eval(cut)]['event_No.']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "442694722\n",
+      "158475033\n",
+      "4090017\n",
+      "173317801\n",
+      "471129309\n",
+      "97961563\n",
+      "247524047\n",
+      "1103976818\n",
+      "828531404\n",
+      "667616810\n",
+      "675224551\n",
+      "437655905\n",
+      "118355686\n",
+      "292971237\n",
+      "368217144\n",
+      "408840917\n",
+      "460152254\n",
+      "49271557\n",
+      "203999918\n",
+      "548087347\n",
+      "590045506\n",
+      "319754947\n",
+      "629290623\n",
+      "43972644\n",
+      "668345084\n",
+      "1511390145\n",
+      "723115528\n",
+      "159747558\n",
+      "1374434888\n",
+      "655244031\n",
+      "658367722\n",
+      "100200345\n",
+      "386568118\n",
+      "807101960\n",
+      "65193184\n",
+      "111870616\n",
+      "241199942\n",
+      "70857128\n",
+      "33386528\n",
+      "245711537\n",
+      "2836749593\n",
+      "1331182259\n"
+     ]
+    }
+   ],
+   "source": [
+    "cut = \"\"\"(\n",
+    "    (events[y][k]['photon-jet_deltaR'] > 1.1) &\n",
+    "    (events[y][k]['AK8jet_particleNet_mass'] > 110) &\n",
+    "    (events[y][k]['AK8jet_particleNet_mass'] < 150) &\n",
+    "    (events[y][k]['AK8jet_Xbb_tagger'] > 0.8) &\n",
+    "    (np.abs(events[y][k].photon_eta) < 1.4442) &\n",
+    "    (np.abs(events[y][k].AK8jet_eta) < 2.4) &\n",
+    "    (events[y][k].photon_pt/events[y][k]['photon+jet_mass'] > 0.35)\n",
+    ")\"\"\"\n",
+    "pool = set()\n",
+    "for i in events[y][k][eval(cut)]['event_No.']:\n",
+    "    if i not in pool:\n",
+    "        pool.add(i)\n",
+    "    else:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "k = 'data'\n",
     "\n",
     "cut = \"\"\"(\n",
-    "    (events[y][k]['photon-jet_deltaR'] > 1.1) &\n",
     "    (events[y][k]['AK8jet_particleNet_mass'] > 50) &\n",
     "    (np.abs(events[y][k].photon_eta) < 1.4442) &\n",
     "    (np.abs(events[y][k].AK8jet_eta) < 2.4) &\n",
@@ -2304,7 +2476,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2318,7 +2490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.14"
   }
  },
  "nbformat": 4,
