--- a/postprocess/Analyze.ipynb
+++ b/postprocess/Analyze.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "source = 'glopart_v2'\n",
-    "base = f'/eos/user/d/dfu/bbgamma_output/{source}'\n",
+    "base = f'/data/bond/fudawei/public/bbgamma_output/{source}'\n",
     "\n",
     "filepath = {\n",
     "    year: {\n",
@@ -129,23 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['gjets_nlo_kfactor_ewk',\n",
-       " 'gjets_nlo_kfactor_qcd',\n",
-       " 'wjets_nlo_kfactor_ewk',\n",
-       " 'wjets_nlo_kfactor_qcd',\n",
-       " 'zjets_nlo_kfactor_ewk',\n",
-       " 'zjets_nlo_kfactor_qcd']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../src/parameters/nlo_kfactor.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m nlo \u001b[38;5;241m=\u001b[39m correctionlib\u001b[38;5;241m.\u001b[39mCorrectionSet\u001b[38;5;241m.\u001b[39mfrom_file(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../src/parameters/nlo_kfactor.json\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mlist\u001b[39m(nlo\u001b[38;5;241m.\u001b[39mkeys())\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.12/site-packages/correctionlib/highlevel.py:373\u001b[0m, in \u001b[0;36mCorrectionSet.from_file\u001b[0;34m(cls, filename)\u001b[0m\n\u001b[1;32m    371\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m    372\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfrom_file\u001b[39m(\u001b[38;5;28mcls\u001b[39m, filename: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCorrectionSet\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m--> 373\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m(open_auto(filename))\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.12/site-packages/correctionlib/highlevel.py:26\u001b[0m, in \u001b[0;36mopen_auto\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m gzfile\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.json\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m---> 26\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m     27\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m file\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: unrecognized file format, expected .json, .json.gz\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../src/parameters/nlo_kfactor.json'"
+     ]
     }
    ],
    "source": [
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,21 +172,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for year in events:\n",
     "    weight[year]['bkg'] = ak.concatenate([weight[year][c] for c in BKG], axis=0)\n",
@@ -2091,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2114,6 +2100,7 @@
     "        \"jet_mass\": events[y][k]['AK8jet_particleNet_mass'][eval(cut)],\n",
     "        \"weight\": weight[y][k][eval(cut)],\n",
     "        \"tagger\": events[y][k]['AK8jet_Xbb_tagger'][eval(cut)],\n",
+    "        'event_No': events[y][k]['event_No.'][eval(cut)],\n",
     "        #\"mass_Zprime_JES_up\": events[y][k]['photon+jet_mass_JES_jes_up'][eval(cut)],\n",
     "        #\"mass_Zprime_JES_down\": events[y][k]['photon+jet_mass_JES_jes_down'][eval(cut)],\n",
     "        #\"mass_Zprime_JER_up\": events[y][k]['photon+jet_mass_JER_up'][eval(cut)],\n",
@@ -2123,31 +2110,9 @@
     "    }\n",
     "    out_tree = ak.Array({k: np.array(v) for k, v in out_tree.items()})\n",
     "\n",
-    "    if not os.path.exists(f'./fit/input/{y}/{mass}'):\n",
-    "        os.makedirs(f'./fit/input/{y}/{mass}')\n",
+    "    os.makedirs(f'./fit/input/{y}/{mass}', exist_ok=True)\n",
     "    with uproot.recreate(f'./fit/input/{y}/{mass}/{fatjet}bb_gamma.root') as file:\n",
     "        file['Events'] = out_tree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'1000$\\\\to$H(bb)$\\\\gamma$'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[42], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m a\u001b[38;5;241m=\u001b[39m\u001b[43mevents\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mRun2\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m1000$\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mto$H(bb)$\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgamma$\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mevent_No.\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[0;31mKeyError\u001b[0m: '1000$\\\\to$H(bb)$\\\\gamma$'"
-     ]
-    }
-   ],
-   "source": [
-    "a=events['Run2'][r'1000$\\to$H(bb)$\\gamma$']['event_No.']"
    ]
   },
   {
@@ -2166,146 +2131,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre>[588849792,\n",
-       " 590745837,\n",
-       " 590494085,\n",
-       " 592082355,\n",
-       " 591485282,\n",
-       " 684100335,\n",
-       " 729815637,\n",
-       " 967430234,\n",
-       " 973990643,\n",
-       " 978341673,\n",
-       " ...,\n",
-       " 441855142,\n",
-       " 451737843,\n",
-       " 451550695,\n",
-       " 453721576,\n",
-       " 452427502,\n",
-       " 455344210,\n",
-       " 455830222,\n",
-       " 455692605,\n",
-       " 459693015]\n",
-       "---------------------------------------------------------\n",
-       "type: 539181 * ?uint64[parameters={&quot;__doc__&quot;: &quot;event/l&quot;}]</pre>"
-      ],
-      "text/plain": [
-       "<Array [588849792, 590745837, ..., 459693015] type='539181 * ?uint64[parame...'>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "events[y][k][eval(cut)]['event_No.']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "442694722\n",
-      "158475033\n",
-      "4090017\n",
-      "173317801\n",
-      "471129309\n",
-      "97961563\n",
-      "247524047\n",
-      "1103976818\n",
-      "828531404\n",
-      "667616810\n",
-      "675224551\n",
-      "437655905\n",
-      "118355686\n",
-      "292971237\n",
-      "368217144\n",
-      "408840917\n",
-      "460152254\n",
-      "49271557\n",
-      "203999918\n",
-      "548087347\n",
-      "590045506\n",
-      "319754947\n",
-      "629290623\n",
-      "43972644\n",
-      "668345084\n",
-      "1511390145\n",
-      "723115528\n",
-      "159747558\n",
-      "1374434888\n",
-      "655244031\n",
-      "658367722\n",
-      "100200345\n",
-      "386568118\n",
-      "807101960\n",
-      "65193184\n",
-      "111870616\n",
-      "241199942\n",
-      "70857128\n",
-      "33386528\n",
-      "245711537\n",
-      "2836749593\n",
-      "1331182259\n"
-     ]
-    }
-   ],
-   "source": [
-    "cut = \"\"\"(\n",
-    "    (events[y][k]['photon-jet_deltaR'] > 1.1) &\n",
-    "    (events[y][k]['AK8jet_particleNet_mass'] > 110) &\n",
-    "    (events[y][k]['AK8jet_particleNet_mass'] < 150) &\n",
-    "    (events[y][k]['AK8jet_Xbb_tagger'] > 0.8) &\n",
-    "    (np.abs(events[y][k].photon_eta) < 1.4442) &\n",
-    "    (np.abs(events[y][k].AK8jet_eta) < 2.4) &\n",
-    "    (events[y][k].photon_pt/events[y][k]['photon+jet_mass'] > 0.35)\n",
-    ")\"\"\"\n",
-    "pool = set()\n",
-    "for i in events[y][k][eval(cut)]['event_No.']:\n",
-    "    if i not in pool:\n",
-    "        pool.add(i)\n",
-    "    else:\n",
-    "        print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
+    "y = 'Run2'\n",
     "k = 'data'\n",
     "\n",
     "cut = \"\"\"(\n",
     "    (events[y][k]['AK8jet_particleNet_mass'] > 50) &\n",
     "    (np.abs(events[y][k].photon_eta) < 1.4442) &\n",
     "    (np.abs(events[y][k].AK8jet_eta) < 2.4) &\n",
-    "    (events[y][k].photon_pt/events[y][k]['photon+jet_mass'] > 0.35)\n",
+    "    (events[y][k].photon_pt/events[y][k]['photon+jet_mass'] > 0.35) &\n",
+    "    (events[y][k].AK8jet_Xbb_tagger > 0.8)\n",
     ")\"\"\"\n",
     "\n",
+    "sum=0\n",
+    "_events = events[y][k][eval(cut)]\n",
+    "dup_fit_mass = {}\n",
+    "dup_jet_mass = {}\n",
+    "dup_tagger = {}\n",
     "out_tree = {\n",
-    "    \"fit_mass\": events[y][k]['photon+jet_mass'][eval(cut)],\n",
-    "    \"jet_mass\": events[y][k]['AK8jet_particleNet_mass'][eval(cut)],\n",
-    "    \"weight\": np.ones_like(events[y][k]['photon+jet_mass'])[eval(cut)],\n",
-    "    \"tagger\": events[y][k]['AK8jet_Xbb_tagger'][eval(cut)],\n",
+    "    'fit_mass': [],\n",
+    "    'jet_mass': [],\n",
+    "    'weight': [],\n",
+    "    'tagger': [],\n",
+    "    'event_No': []\n",
     "}\n",
     "\n",
-    "out_tree = ak.Array({k: np.array(v) for k, v in out_tree.items()})\n",
+    "for i, n in enumerate(_events['event_No.']):\n",
+    "    if n in dup_fit_mass and (\n",
+    "        _events['photon+jet_mass'][i] == dup_fit_mass[n] and \n",
+    "        _events['AK8jet_particleNet_mass'][i] == dup_jet_mass[n] and \n",
+    "        abs(_events['AK8jet_Xbb_tagger'][i]-dup_tagger[n])<1e-3\n",
+    "    ):\n",
+    "        sum+=1\n",
+    "        continue\n",
+    "    dup_fit_mass[n] = _events['photon+jet_mass'][i]\n",
+    "    dup_jet_mass[n] = _events['AK8jet_particleNet_mass'][i]\n",
+    "    dup_tagger[n] = _events['AK8jet_Xbb_tagger'][i]\n",
+    "    out_tree['fit_mass'].append(_events['photon+jet_mass'][i])\n",
+    "    out_tree['jet_mass'].append(_events['AK8jet_particleNet_mass'][i])\n",
+    "    out_tree['weight'].append(1)\n",
+    "    out_tree['tagger'].append(_events['AK8jet_Xbb_tagger'][i])\n",
+    "    out_tree['event_No'].append(_events['event_No.'][i])\n",
     "\n",
-    "if not os.path.exists(f'./fit/input/{y}'):\n",
-    "    os.makedirs(f'./fit/input/{y}')\n",
+    "out_tree = ak.Array({k: np.array(v) for k, v in out_tree.items()})\n",
+    "os.makedirs(f'./fit/input/{y}', exist_ok=True)\n",
     "with uproot.recreate(f'./fit/input/{y}/data.root') as file:\n",
     "    file['Events'] = out_tree"
    ]
