--- a/postprocess/Analyze.ipynb
+++ b/postprocess/Analyze.ipynb
@@ -30,12 +30,12 @@
     "\n",
     "filepath = {\n",
     "    year: {\n",
-    "        r'Top+$\\gamma$': sum([glob(f'{base}/mc/{year}/{channel}/*') for channel in ['TTGJets']], []),\n",
-    "        r'Z+$\\gamma$':  sum([glob(f'{base}/mc/{year}/{channel}/*') for channel in ['ZGToLLG', 'ZGToJJG']], []),\n",
-    "        r'W+$\\gamma$': sum([glob(f'{base}/mc/{year}/{channel}/*') for channel in ['WGToJJG', 'WGToLNuG']], []),\n",
-    "        r'Non-prompt $\\gamma$': sum([glob(f'{base}/mc/{year}/{channel}/*') for channel in ['ST', 'TTJets', 'ZJetsToNuNu', 'ZJetsToLL', 'ZJetsToQQ', 'WJetsToLNu', 'WJetsToQQ', 'QCD']], []),\n",
-    "        r'QCD+$\\gamma$': sum([glob(f'{base}/mc/{year}/{channel}/*') for channel in ['GJets']], []),\n",
-    "        'data': sum([glob(f'{base}/data/{year}/{channel}/*') for channel in [\"EGamma\" if year==\"2018\" else \"SinglePhoton\"]], []),\n",
+    "        #r'Top+$\\gamma$': sum([glob(f'{base}/mc/{year}/{channel}/*') for channel in ['TTGJets']], []),\n",
+    "        #r'Z+$\\gamma$':  sum([glob(f'{base}/mc/{year}/{channel}/*') for channel in ['ZGToLLG', 'ZGToJJG']], []),\n",
+    "        #r'W+$\\gamma$': sum([glob(f'{base}/mc/{year}/{channel}/*') for channel in ['WGToJJG', 'WGToLNuG']], []),\n",
+    "        #r'Non-prompt $\\gamma$': sum([glob(f'{base}/mc/{year}/{channel}/*') for channel in ['ST', 'TTJets', 'ZJetsToNuNu', 'ZJetsToLL', 'ZJetsToQQ', 'WJetsToLNu', 'WJetsToQQ', 'QCD']], []),\n",
+    "        #r'QCD+$\\gamma$': sum([glob(f'{base}/mc/{year}/{channel}/*') for channel in ['GJets']], []),\n",
+    "        #'data': sum([glob(f'{base}/data/{year}/{channel}/*') for channel in [\"EGamma\" if year==\"2018\" else \"SinglePhoton\"]], []),\n",
     "    } for year in ['2016pre', '2016post', '2017', '2018']\n",
     "}\n",
     "\n",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,6 @@
     "    \n",
     "    ## analyze\n",
     "\n",
-    "        \n",
     "    ## plot\n",
     "    for (k, v) in arrays.items():\n",
     "        hist = bh.Histogram(bh.axis.Regular(bins, x_min, x_max), storage=bh.storage.Weight())\n",
@@ -1439,13 +1438,17 @@
    "outputs": [],
    "source": [
     "import glob, yaml, os\n",
-    "N0 = {'ZpToHG': {}, 'GluGluToZG': {}}\n",
+    "N0 = {'ZpToHG': {}, 'GluGluToZG': {}, 'GluGluToZG_5p6': {}, 'GluGluToZG_10p0': {}}\n",
     "for folder in sum([glob.glob(f'/data/bond/fudawei/public/bbgamma_output/{source}/mc/*/{channel}/*') for channel in N0.keys()], []):\n",
     "    channel = folder.split('/')[-2]\n",
     "    mass = folder.split('/')[-1].split('M')[-1].replace('_0p014', '')\n",
-    "    if '_' in mass:\n",
-    "        continue\n",
-    "    mass = int(mass)\n",
+    "    if '_0p014' in mass:\n",
+    "        channel = 'GluGluToZG'\n",
+    "    elif '_5p6' in mass:\n",
+    "        channel = 'GluGluToZG_5p6'\n",
+    "    elif '_10p0' in mass:\n",
+    "        channel = 'GluGluToZG_10p0'\n",
+    "    mass = int(mass.split('_')[0])\n",
     "    if mass == 600:\n",
     "        continue\n",
     "    mode = '_'.join(folder.split('/')[-4:-1])\n",
