--- a/fit/errorband.ipynb
+++ b/fit/errorband.ipynb
@@ -332,6 +332,123 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "region = 'SR1'\n",
+    "year = 'Run2'\n",
+    "jet = 'Z'\n",
+    "signal_mass = '3500_5p6'\n",
+    "if 'fit' not in os.getcwd():\n",
+    "    os.chdir('fit')\n",
+    "\n",
+    "cut = f\"\"\"(\n",
+    "    (jet_mass>80) & (jet_mass<110) & \n",
+    "    (tagger>0.98) & (tagger<2)\n",
+    ")\"\"\"\n",
+    "signal_region = region[:2]+jet+region[2:]\n",
+    "m = int(str(signal_mass).split('_')[0])\n",
+    "\n",
+    "with open('../src/parameters/uncertainty/systematics.yaml', 'r', encoding='utf-8') as f:\n",
+    "    systematics = yaml.safe_load(f)\n",
+    "\n",
+    "if '_' in str(signal_mass):\n",
+    "    sigma = m * (0.056 if '_5p6' in signal_mass else 0.10)\n",
+    "else:\n",
+    "    f = uproot.open(f\"input/{year}/{signal_mass}/bbgamma_SR{jet}.root\")\n",
+    "    sigma = np.std(f['Events']['fit_mass'].array())\n",
+    "\n",
+    "## Signal modeling\n",
+    "f = ROOT.TFile(f\"input/{year}/{signal_mass}/bbgamma_SR{jet}.root\", \"r\")\n",
+    "# Load TTree\n",
+    "tree = f.Get(\"Events\")\n",
+    "\n",
+    "# Define mass and weight variables\n",
+    "fit_mass = ROOT.RooRealVar(\"fit_mass\", \"fit_mass\", m, 650, 4000)\n",
+    "weight = ROOT.RooRealVar(\"weight\", \"weight\", 0.1, 0, 100)\n",
+    "jet_mass = ROOT.RooRealVar(\"jet_mass\", \"jet_mass\", 125, 0, 999)\n",
+    "tagger = ROOT.RooRealVar(\"tagger\", \"tagger\", 0.5, 0, 2)\n",
+    "fit_mass.setRange(\"fit_range\", max(650, 2*m/3), min(4000, 4*m/3))\n",
+    "\n",
+    "# Convert to RooDataSet\n",
+    "mc = ROOT.RooDataSet(\"signal\", \"signal\", tree, ROOT.RooArgSet(fit_mass, weight, jet_mass, tagger), cut, \"weight\")\n",
+    "\n",
+    "# Introduce RooRealVars into the workspace for the fitted variable\n",
+    "x0 = ROOT.RooRealVar(\"x0\", \"x0\", m, m - 50, m + 50)\n",
+    "sigmaL = ROOT.RooRealVar(\"sigmaL\", \"sigmaL\", sigma, 10, 3*sigma)\n",
+    "sigmaR = ROOT.RooRealVar(\"sigmaR\", \"sigmaR\", sigma, 10, 3*sigma)\n",
+    "alphaL = ROOT.RooRealVar(\"alphaL\", \"alphaL\", 1, 0.4, 3)\n",
+    "alphaR = ROOT.RooRealVar(\"alphaR\", \"alphaR\", 1, 0.3, 3)\n",
+    "nL = ROOT.RooRealVar(\"nL\", \"nL\", 2, 0.4, 10)\n",
+    "nR = ROOT.RooRealVar(\"nR\", \"nR\", 2, 1, 4.5)\n",
+    "\n",
+    "if year != 'Run2':\n",
+    "    JES = ROOT.RooRealVar(f\"JES_{year}\", f\"JES_{year}\", 0, -5, 5)\n",
+    "else:\n",
+    "    JES = ROOT.RooRealVar(\"JES\", f\"JES\", 0, -5, 5)\n",
+    "JER = ROOT.RooRealVar(\"JER\", \"JER\", 0, -5, 5)\n",
+    "PES = ROOT.RooRealVar(\"PES\", \"PES\", 0, -5, 5)\n",
+    "PER = ROOT.RooRealVar(\"PER\", \"PER\", 0, -5, 5)\n",
+    "JES.setConstant(True); JER.setConstant(True); PES.setConstant(True); PER.setConstant(True)\n",
+    "jes = systematics['JES'][region][m]-1\n",
+    "mean = ROOT.RooFormulaVar(\"mean\", \"mean\", \n",
+    "    \"@0*(1+%f*@1+%f*@2)\"%(jes*(10 if year=='2018' else 1), (systematics['PES'][region][m]-1)/2), \n",
+    "    ROOT.RooArgList(x0, JES, PES))\n",
+    "widthL = ROOT.RooFormulaVar(\"widthL\", \"widthL\", \n",
+    "    \"@0*(1+%f*@1+%f*@2)\"%(systematics['JER'][region][jet][signal_mass]-1, systematics['PER'][region][jet][signal_mass]-1), \n",
+    "    ROOT.RooArgList(sigmaL, JER, PER))\n",
+    "widthR = ROOT.RooFormulaVar(\"widthR\", \"widthR\", \n",
+    "    \"@0*(1+%f*@1+%f*@2)\"%(systematics['JER'][region][jet][signal_mass]-1, systematics['PER'][region][jet][signal_mass]-1),\n",
+    "    ROOT.RooArgList(sigmaR, JER, PER))\n",
+    "\n",
+    "# Define the Gaussian with mean=MH and width=sigma\n",
+    "model_signal = ROOT.RooCrystalBall(f\"model_bbgamma_{signal_region}\", f\"model_bbgamma_{signal_region}\", fit_mass, mean, widthL, widthR, alphaL, nL, alphaR, nR)\n",
+    "signal_norm = ROOT.RooRealVar(f\"model_bbgamma_{signal_region}_norm\", f\"Number of signal events in {signal_region}\", mc.sumEntries(), 1e-3, 5*mc.sumEntries())\n",
+    "\n",
+    "# Fit Gaussian to MC events and plot\n",
+    "model_signal.fitTo(mc, ROOT.RooFit.Range('fit_range'),  ROOT.RooFit.PrintLevel(-1), ROOT.RooFit.SumW2Error(True))\n",
+    "\n",
+    "x0.setConstant(True)\n",
+    "sigmaL.setConstant(True)\n",
+    "sigmaR.setConstant(True)\n",
+    "alphaL.setConstant(True)\n",
+    "alphaR.setConstant(True)\n",
+    "nL.setConstant(True)\n",
+    "nR.setConstant(True)\n",
+    "#signal_norm.setConstant(True)\n",
+    "\n",
+    "sig_model_dir = f'workspace/{year}/{signal_mass}'\n",
+    "os.makedirs(sig_model_dir, exist_ok=True)\n",
+    "f_out = ROOT.TFile(f\"{sig_model_dir}/signal_{signal_region}.root\", \"RECREATE\")\n",
+    "w_sig = ROOT.RooWorkspace(\"workspace_signal\", \"workspace_signal\")\n",
+    "getattr(w_sig, \"import\")(model_signal)\n",
+    "#getattr(w_sig, \"import\")(signal_norm)\n",
+    "w_sig.Print()\n",
+    "w_sig.Write()\n",
+    "f_out.Close()\n",
+    "\n",
+    "with open(f'{sig_model_dir}/signal_{signal_region}.yaml', 'w', encoding='utf-8') as f:\n",
+    "    info = {\n",
+    "        'x0': x0.getVal(),\n",
+    "        'mean': mean.getVal(),\n",
+    "        'sigmaL': sigmaL.getVal(),\n",
+    "        'widthL': widthL.getVal(),\n",
+    "        'sigmaR': sigmaR.getVal(),\n",
+    "        'widthR': widthR.getVal(),\n",
+    "        'alphaL': alphaL.getVal(),\n",
+    "        'alphaR': alphaR.getVal(),\n",
+    "        'nL': nL.getVal(),\n",
+    "        'nR': nR.getVal(),\n",
+    "        'event_sum': mc.sumEntries(),\n",
+    "        'norm': signal_norm.getVal(),\n",
+    "        'sigma': float(sigma)\n",
+    "    }\n",
+    "    yaml.dump(info, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 84,
    "metadata": {},
    "outputs": [],
@@ -1355,7 +1472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
