--- a/fit/fit.ipynb
+++ b/fit/fit.ipynb
@@ -8307,7 +8307,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -8321,7 +8321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.14"
   }
  },
  "nbformat": 4,
